Frontend bug fix when setting a too long country name

--- a/app/assets/stylesheets/web/app.css.scss
+++ b/app/assets/stylesheets/web/app.css.scss
@@ -269,7 +269,7 @@ a.button {
     float: left;
     margin: 14px;
     .name {
-      width: 100%;
+      width: 180px;
       text-align: center;
     }
   }
